# AC215-Project-FitAI

./: .dockerignore  .gitignore  Project Proposal Milestone 1.docx  README.md  docker-compose.yml
data/raw/: exercise_catalog.csv
services/db/: init.sql
services/frontend/: README.md
services/ml_core/: app.py
services/ocr_engine/: Dockerfile  OCR.py  app.py  docker-entrypoint.sh  pyproject.toml  requirements.txt  run_ocr_main.py
services/pipeline/: Dockerfile  app.py  etl.py  requirements.txt
services/rag_pipeline/: .dockerignore  Dockerfile  QUICK_START.md  agent_tools.py  app.py  cli.py  docker-entrypoint.sh  pyproject.toml  rag_core.py
services/rag_pipeline/input-datasets/: Progression Models in Resistance Training for Healthy Adults.txt
services/rag_pipeline/outputs/: chunks-char-split-Progression Models in Resistance Training for Healthy Adults.jsonl  embeddings-char-split-Progression Models in Resistance Training for Healthy Adults.jsonl
