[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.0",
    "fastapi>=0.104.0",
    "google-genai>=1.39.1",
    "google-cloud-storage>=2.10.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "pandas>=2.3.3",
    "uvicorn>=0.24.0",
]
